[package]
name = "royalty-splitter"
version = "0.1.0"
edition = "2018"

[dependencies]
ethers = { version = "5.0", features = ["full"] }
foundry-cli = "0.1"
dotenv = "0.15"

[dev-dependencies]
fuzzytest = "0.3"[package]
name = "lex-kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
[build-dependencies]
cc = "1.0"

