[package]
name = "lexaviation2"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = { version = "0.10", default-features = false }
serde_json = { version = "1.0", default-features = false, optional = true }
csv      = { version = "1.3", default-features = false, optional = true }
bincode  = { version = "1.3", default-features = false, optional = true }

[features]
default = []
legacy-adapter = ["dep:serde_json", "dep:csv"]
air-gap        = ["dep:bincode"]

[lib]
name = "lexaviation2"
path = "src/lib.rs"
